Rework of the attribute api key authentication to fully match with the sapl-node api key generator